# PyCA

./: .gitignore  Automaton.py  Baricelli.py  CA1D.py  CA2D.py  Camera.py  README.md  ReactionDiffusion.py  World copy.jsx  app.py  benchmark.ipynb  benchmark_ca2d.py  image_stream.py  main.py  main_old.py  maincolors.py  notes.txt  problems.txt  pyca.py  pyproject.toml  requirements.txt  simulate.py  test_slider_anchor_bug.py  testing.ipynb  utils.py
Automata/: Automaton.py  __init__.py
Automata/models/: Baricelli.py  CA1D.py  CA2D.py  FallingSand.py  LGCA.py  Lenia.py  NCA.py  ReactionDiffusion.py  __init__.py
Automata/utils/: __init__.py  adjectives.pk  batch_params.py
LeniaCool/: abominable_mongolic.pt  addible_patrisib.pt  aglow_thelephoraceae.pt  bedfast_laplace.pt  cissy_reovirus.pt  citywide_pion.pt  consumptive_manganese.pt  counterinsurgent_adventurousness.pt  cuspidal_devil.pt  cyrillic_trapaceae.pt  draining_periphery.pt  dried_chasidism.pt  honied_syllogiser.pt  hoydenish_glowworm.pt  irenic_purpleness.pt  olive_glint.pt  ornamental_collimator.pt  pervious_mistreatment.pt  scorched_agnail.pt
LeniaParams/: param1.pt  param10.pt  param11.pt  param12.pt  param13.pt  param14.pt  param15.pt  param16.pt  param17.pt  param18.pt  param19.pt  param2.pt  param20.pt  param21.pt  param22.pt  param23.pt  param24.pt  param25.pt  param26.pt  param27.pt  param28.pt  param29.pt  param3.pt  param30.pt  param31.pt  param32.pt  param33.pt  param34.pt  param35.pt  param36.pt  param37.pt  param38.pt  param39.pt  param4.pt  param40.pt  param41.pt  param42.pt  param43.pt  param44.pt  param45.pt  (+22 more)
NCA_train/: nca_trainer.py  train.py  train_notebook.ipynb
NCA_train/trained_model/: betta_fixed.pt  betta_fixed_explo.pt  betta_pools.pt  betta_vary.pt  fish_huge.pt  repairing_betta.pt  square.pt
demo_data/NCA_models/: flamingo.pt
demo_data/demo_lenia/: bedraggled_constant.pt  clayey_countryside.pt  constrained_expat.pt  dominant_carpus.pt  expensive_boogeyman.pt  individualised_retina.pt  magenta_ruscus.pt  nonfissile_mudra.pt  palpitating_alleyway.pt  provable_nonresident.pt  splay_dustrag.pt  stagflationary_primaquine.pt  unloving_rundle.pt  unmarketable_steelworks.pt  untrod_lir.pt  used_thomson.pt
demo_data/demo_macelenia/: anencephalic_brakeman.pt  apparent_kenalog.pt  arbitrative_punks.pt  assimilable_pyuria.pt  bidentate_courtyard.pt  cytologic_auxin.pt  (+20 more)
extras/: fix_video_encoding.py
frontend/: package-lock.json  package.json
interface/: __init__.py  text.py
lenia_cool_params/: acervate_strikingness.pt  branchy_blower.pt  crestfallen_brattice.pt  endoparasitic_apocynaceae.pt  extrasensory_oversupply.pt  recurring_buildup.pt  riming_caliph.pt  seamanlike_shadbush.pt  tabular_vitalness.pt  unattired_maarianhamina.pt  undue_vowel.pt  unsoluble_sphere.pt
pyca/: __init__.py
templates/: index.html
train_nca/: README.md  extra_requirements.txt  nca_trainer.py  train.py
utils/: Camera.py  __init__.py  utils.py
(+210 files in other folders)
